<resources>
    <string name="app_name">Barta</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_compose">Compose</string>
    <string name="upvote_button_desc">Upvote button</string>
    <string name="downvote_button_desc">Downvote button</string>
    <string name="comment_button_desc">Comment button</string>
    <string name="time_icon_desc">Time icon</string>
    <string name="place_icon_desc">Place icon</string>
    <string name="create_button_desc">Create button</string>
    <string name="compose_activity_title">Create Post</string>
    <string name="compose_autofill_hint">Write your post</string>
    <string name="compose_action_text">Compose</string>
    <string name="compose_done_action_text">Post</string>
    <string name="comment_autofill_hint">Write Comment</string>
    <string name="comments_label">COMMENTS</string>
    <string name="karma_label">Karma:</string>
    <string name="post_karma_label">Post Karma:</string>
    <string name="upvote_label">Upvotes:</string>
    <string name="downvote_label">Downvotes:</string>
    <string name="comment_karma_label">Comment Karma:</string>
    <string name="age_label">Account Age:</string>
</resources>
